syntax = "proto3";
option csharp_namespace = "GrpcClient";
package socialMediaUser;

message CreateSMUserRequest {
  string email = 1;
  string username = 2;
  string nickname = 3;
  string password = 4;
}

message UpdateSMUserRequest {
  string username = 1;
  string password = 2;
  string nickname = 3;
  string email = 4;
  int32 id = 5;
}
message CreateSMUserResponse  {
  int32 id = 1;
  string email = 2;
  string username = 3;
  string nickname = 4;
  string password = 5;
  int32 followersCount = 6;
  int32 followingCount = 7;
}

message GetFollowersResponse {
  string list = 1; // JSON representation of followers
}

message IsFollowingResponse {
  bool isFollowing = 1;
}


message Follower {
  int32 id = 1;
  string username = 2;
  string nickname = 3;
}
//Requests

message DeleteSMUserRequest {
  int32 id = 1;
}

message GetSMUserRequest {
  int32 id = 1;
  string username = 2;
}

message GetAllUsersRequest{
  string list = 1;
}

message UpdateSMUserEmailRequest {
  int32 id = 1;
  string email = 2;
}

message UpdateSMUserNicknameRequest {
  int32 id = 1;
  string nickname = 2;
}

message UpdateSMUserPasswordRequest {
  int32 id = 1;
  string password = 2;
}
message FollowUserRequest {
  int32 followerId = 1;
  int32 followedId = 2;
}
message UnfollowUserRequest {
  int32 followerId = 1;
  int32 followedId = 2;
}

message IsFollowingRequest {
  int32 followerId = 1;
  int32 followedId = 2;
}

message GetThreeRandomUsersRequest {
  int32 userId = 1;
}

message GetAllUsersResponse{
  string list = 1;
}

message GetFollowersRequest {
  int32 id = 1;
}

message SMUserResponse {
  int32 id = 1;
  string email = 2;
  string username = 3;
  string nickname = 4;
  string password = 5;
  int32 followersCount = 6;
  int32 followingCount = 7;
}

message SMUserEmptyResponse {

}

message GetThreeRandomUsersResponse {
  string list = 1;
}

service SMUserService {
  rpc CreateUser (CreateSMUserRequest) returns (CreateSMUserResponse);
  rpc UpdateEmail (UpdateSMUserEmailRequest) returns (SMUserEmptyResponse);
  rpc UpdateNickname (UpdateSMUserNicknameRequest) returns (SMUserEmptyResponse);
  rpc UpdatePassword (UpdateSMUserPasswordRequest) returns (SMUserEmptyResponse);
  rpc DeleteUser (DeleteSMUserRequest) returns (SMUserEmptyResponse);
  rpc GetAllSMUsers (GetAllUsersRequest) returns (GetAllUsersResponse);
  rpc GetByUserName (GetSMUserRequest) returns (SMUserResponse);
  rpc GetByID (GetSMUserRequest) returns (SMUserResponse);
  rpc FollowUser (FollowUserRequest) returns (SMUserEmptyResponse);
  rpc UnfollowUser (UnfollowUserRequest) returns (SMUserEmptyResponse);
  rpc GetFollowers (GetFollowersRequest) returns (GetFollowersResponse);
  rpc GetFollowing (GetFollowersRequest) returns (GetFollowersResponse);
  rpc IsFollowing (IsFollowingRequest) returns (IsFollowingResponse);
  rpc GetThreeRandomUsers (GetThreeRandomUsersRequest) returns (GetThreeRandomUsersResponse);
}